# livewell

./: .gitignore  CLAUDE.md  README.md
apps/api/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
apps/api/livewell/: __init__.py
apps/api/livewell/api/: __init__.py
apps/api/livewell/backtest/: __init__.py
apps/api/livewell/data/: __init__.py
apps/api/routers/: backtest.py  dashboard.py  model_health.py  signals.py  tracker.py
apps/api/schemas/: backtest.py  contract.py  dashboard.py  model_health.py  tracker.py
apps/api/tests/: test_backtest.py  test_dashboard.py  test_model_health.py  test_schemas_contract.py  test_schemas_dashboard.py  test_signals.py  test_tracker.py
notebooks/livewell-nadex/: .gitignore  CONTRIBUTING.md  LICENSE  pyproject.toml  run_tests.py
notebooks/livewell-nadex/configs/: README.md  anonymization.yaml  experiment.yaml  experiments.yaml  risk.yaml  ticker_mappings.yaml  tickers.yaml
notebooks/livewell-nadex/notebooks/: nadex-backtesting.ipynb  nadex-kpi-report.ipynb
notebooks/livewell-nadex/refactoring/: COMPLETE_NOTEBOOK_UPDATE_GUIDE.md  COMPLETE_RSI_PARAMETERS_REVIEW.md  COMPLETE_STRATEGY_REFACTOR_GUIDE.md  COMPLETE_migration_checklist_sprint_2_5.md  COMPLETE_refactor_notes.md  COMPLETE_s3_config_verification.md  COMPLETE_utils_s3_comparison.md
notebooks/livewell-nadex/reports/: daily_metrics.csv  kpi_dashboard.html  kpi_summary.json  trades.csv
notebooks/livewell-nadex/sprints/: README.md  sprint_1.md  sprint_2.md  sprint_2_5.md  sprint_3.md  sprint_4A.md
notebooks/livewell-nadex/tests/: test_strategy_rsi.py
(+103 files in other folders)
