[project]
name = "livewell-api"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "yfinance>=1.3.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "boto3>=1.42.95",
    "pandas-ta",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "moto[s3]>=5.1.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
